# Spotify-Project

./: AbstractRepository.h  Account.cpp  Account.h  AccountRepository.h  Album.cpp  Album.h  AlbumRepository.cpp  AlbumRepository.h  ArtistRepository.cpp  ArtistRepository.h  CMakeLists.txt  ListenerRepository.cpp  ListenerRepository.h  Playlist.cpp  Playlist.h  PlaylistRepository.cpp  PlaylistRepository.h  Song.cpp  Song.h  SongRepository.cpp  SongRepository.h  SpotifySystem.cpp  SpotifySystem.h  main.cpp  mainwindow.ui
